tests/expectations/compiler/structs/inline_member_pass.out
Error [EPAR0370047]: expected parameter name
    --> compiler-test:6:13
     |
   6 |     fn main(let x: u8, y: bool) -> bool {
     |             ^^^
